[package]
name = "token-vesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw20 = "0.8.0" 
cw-storage-plus  = { version = "0.8.0" }
terraswap = "2.4.0"
schemars = "0.8.7"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }